<resources>
    <string name="app_name">Milan</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="all_fields_mandatory">All fields are mandatory</string>
    <string name="all_fields_pswd_minimum">Password should be between 4-8 characters</string>
    <string name="password_missmatch">Paswords are not matching</string>
    <string name="Email">Email</string>
    <string name="not_valid_email">Not a valid email</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="abcd">abcd</string>
    <string name="Amazon">Amazon</string>
    <string name="web">https://www.amazon.in</string>
    <string name="about">About</string>
    <string name="nav_open">Open Nav Drawer</string>
    <string name="nav_close">Close Nav Drawer</string>
    <string name="search">Search</string>
    <string name="search_4_prod">Search for products</string>
    <string name="offers_for_you">Offers for you</string>
    <string name="view_all">View all</string>
    <string name="electronics">Electronics</string>
    <string name="styles_for_men">Styles for men</string>
    <string name="clothes">Clothes</string>
    <string name="kitchen">Kitchen Items</string>
    <string name="suggested_4_u">Suggested for you</string>
    <string name="todays_deal">Todays deal</string>
    <string name="kids">KIDS</string>
    <string name="offer_item">Offer item</string>
    <string name="orginal_price">Original Price</string>
    <string name="rs">\u20A8</string>
    <string name="Rs">\u20B9</string>
    <string name="dummy_text1">"fkfkfkf kfkff kfkkf fkkf "</string>
    <string name="dummy_text">"India (Hindi: Bhārat), officially the Republic of India (Hindi: Bhārat Gaṇarājya),[23] is a country in South Asia. It is the second-most populous country, the seventh-largest country by land area, and the most populous democracy in the world. Bounded by the Indian Ocean on the south, the Arabian Sea on the southwest, and the Bay of Bengal on the southeast, it shares land borders with Pakistan to the west;[f] China, Nepal, and Bhutan to the north; and Bangladesh and Myanmar to the east. In the Indian Ocean, India is in the vicinity of Sri Lanka and the Maldives; its Andaman and Nicobar Islands share a maritime border with Thailand and Indonesia. "</string>
    <string name="Read_more">Read More</string>
    <string name="size">Size</string>
    <string name="delivery_option">DELIVERY OPTIONS</string>
    <string name="Check">Check</string>
    <string name="enter_pincode">Enter pin code</string>
    <string name="check_availability"><![CDATA[Please enter PIN code to check delivery time & Pay on Delivery Availability]]></string>
    <string name="best_offer">BEST OFFERS</string>
    <string name="product_detail">PRODUCT DETAILS</string>
    <string name="product_details"><![CDATA[Trendy and tough pair of floater sandals with a smooth nubuck upper and a contrasting detachable Hook & Loop strap closure for a comfort fit. There is additional padding at points of high abrasion for extra comfort. The sandals have Rubber sole with deep lugs giving them good traction which makes it ideal for long hikes. Also featuring an arched heel for support and a compressed EVA midsole that acts as an excellent shock absorber.]]></string>
    <string name="See_more">See More</string>
    <string name="See_less">See Less</string>
    <string name="rating_and_reviews"><![CDATA[RATINGS & REVIEWS]]></string>
    <string name="View_More">View More</string>
    <string name="similar_product">SIMILAR PRODUCTS</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have account ?</string>
    <string name="register">Register</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="myhome">Home</string>
    <string name="mycart">My Cart</string>
    <string name="mywishlist">My Wish List</string>
    <string name="myorder">My Order</string>
    <string name="logout">Logout</string>
    <string name="myaccount">My Account</string>
    <string name="search_all_orders">Search all orders</string>
    <string name="filter">FILTER</string>
    <string name="orders">Orders</string>
    <string name="remove">REMOVE</string>
    <string name="move_to_wish_list">MOVE TO WISHLIST</string>
    <string name="proceed_to_check_out">PROCEED TO CHECK OUT</string>
    <string name="change">Change</string>
    <string name="total_mrp">Total MRP</string>
    <string name="dis_mrp">Discount MRP</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="speech_recog_not">Speech recognition is not available on this device!</string>
    <string name="google_voice_type_must_be_enabled">Google voice typing must be enabled!</string>
    <string name="myprofile">My Profile</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="add_photo">Add Photo</string>
    <string name="edit_details">Edit Details</string>
    <string name="bismillah">Bismillah</string>
    <string name="myrequest">My Requests</string>
    <string name="history">History</string>
    <string name="favas">Favas</string>
    <string name="hello_favas">Hello Favas</string>
    <string name="new_request">New Request</string>
    <string name="you_r_sending">You\'re Sending</string>
    <string name="product_name">Product Name</string>
    <string name="done">Done</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="aprox_weight">Aprox Weight</string>
    <string name="length">Length</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="receiver_details">Receiver Details</string>
    <string name="name_of_rec">Name of Receiver</string>
    <string name="delivery_loc">Delivery Location</string>
    <string name="contact_no_rec">Contact Number of Receiver</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_nearby">Vehicle Near by</string>
    <string name="payment">Payment</string>
    <string name="send_pick_up_request">Send Pick-up Request</string>
    <string name="call_now">Call Now</string>
    <string name="chat">Chat</string>
    <string name="sme_wrg">Something went wrong</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="milan">Milan Readymades</string>
    <string name="sort">SORT</string>
    <string name="sort_by">SORT BY</string>
    <string name="pricehtl">Price - high to low</string>
    <string name="pricelth">Price - low to high</string>
    <string name="none">None</string>
    <string name="filter_by">FILTER BY</string>
    <string name="brand">Brand</string>
    <string name="color">Color</string>
    <string name="category">Category</string>
    <string name="apply">Apply</string>
    <string name="pin">Pincode</string>
    <string name="ads">Addsress</string>
    <string name="View_Less">View Less</string>
    <string name="add_2_cart">Add to cart</string>
    <string name="save">Save</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_proceed"><![CDATA[VERIFY & PROCEED]]></string>
    <string name="otp_exp">OTP is expired</string>
    <string name="plz_enter_valid_mob">Please enter valid mob</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="moboremail">Mobile number </string>
    <string name="confirm_log_out">Confirm Log Out</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_camel">Cancel</string>
    <string name="logout_cap">LOG OUT</string>
    <string name="logout_warning">, you are logging out of your Shopping App on this device.</string>
    <string name="Plz_do_login">Please do login</string>
    <string name="plz_select_qty">Please select quantity</string>
    <string name="plz_select_size">Please select the size</string>
    <string name="remove_this_item">Do you want to remove this item</string>
    <string name="do_u_want_to_move_to_wish">Do you want to move this item to wish list</string>
    <string name="men">MEN</string>
    <string name="women">WOMEN</string>
    <string name="lifestyle">LIFESTYLE</string>
    <string name="wish">Wish</string>
    <string name="add_del_addrs">"Add Delivery Address "</string>
    <string name="full_name">Full name</string>
    <string name="flat_ads">Flat,House no..,Building,Company,Apartment</string>
    <string name="area">Area,Colony,Street,Sector,Village</string>
    <string name="landmark">Landmark e.g. near Apollo Hospial</string>
    <string name="twn">Town/City</string>
    <string name="saved_del_addrs">Saved Delivery Locations</string>
    <string name="del_ads">Delivery Address</string>
    <string name="Plz_wait">Please wait </string>
    <string name="stock_not_available">Stock is not available</string>
    <string name="tot_no_items">Total no. of items</string>
    <string name="tot_free_no_items">Total no.free items</string>
    <string name="plz_chk_net">Check your internet</string>
    <string name="lsesstk_plz_reduce">Less stock please reduce qty</string>
    <string name="image">image</string>
    <string name="submit">Submit</string>
    <string name="confirm_forgot_pswd">Password Forgot?</string>
    <string name="reset_pswd">Reset Password</string>
    <string name="try_again">Try Again</string>
    <string name="oops">OOPS!</string>

</resources>