<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/pale_ash">

<TextView
    android:id="@+id/txt1"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:text="@string/sort_by"
    android:gravity="center_vertical"
    android:paddingStart="20dp"
    android:textColor="#adb5bd"
    android:textSize="12sp"

    />

    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height=".12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/text_gray"


        />

    <TextView
        android:id="@+id/txtprice_none"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v1"
        android:text="@string/none"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/text_gray"
        android:gravity="center_vertical"
        android:paddingStart="20dp"

        />

    <TextView
        android:id="@+id/txtprice_htl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtprice_none"
        android:text="@string/pricehtl"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/text_gray"
        android:gravity="center_vertical"
        android:paddingStart="20dp"

        />


    <TextView
        android:id="@+id/txtprice_lth"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtprice_htl"
        android:text="@string/pricelth"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/text_gray"
        android:gravity="center_vertical"
        android:paddingStart="20dp"

        />







</androidx.constraintlayout.widget.ConstraintLayout>