<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_ash"
    android:keepScreenOn="true">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="494dp"
        android:layout_height="0dp"
        android:src="@drawable/gradient_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".5"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        >


        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginLeft="25dp"

            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:foregroundGravity="center"
            app:cardCornerRadius="50dp"
            android:layout_margin="10dp"



            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="40dp"

                android:orientation="vertical">


                <EditText
                    android:id="@+id/edtusername"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/montserrat_alternates"

                    android:hint="@string/username"
                    android:maxLength="15"
                    android:singleLine="true" />


                <EditText
                    android:id="@+id/edtpswd"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/montserrat_alternates"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="8"
                    android:singleLine="true" />


                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/btn1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/login"
                    android:textColor="#FFFFFF"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_alternates"
                        android:text="@string/forgot_password"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                      android:layout_marginTop="30dp"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal">


                        <TextView
                            android:id="@+id/txt_skp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_alternates"
                            android:text="@string/skip_for_now"
                            android:gravity="start"/>


                        <TextView
                            android:id="@+id/txt_reg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_alternates"
                            android:textColor="@color/green"
                            android:layout_gravity="end"
                            android:layout_marginStart="20dp"
                            android:text="@string/register" />


                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>