<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp"
    android:background="@color/white">


    <TextView
        android:id="@+id/txthead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/confirm_forgot_pswd"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
/>


    <EditText
        android:id="@+id/edt_mob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:maxLength="10"
        android:hint="Mobile Number"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"

        app:layout_constraintTop_toBottomOf="@+id/txthead" />


    <TextView
        android:id="@+id/txt_submit"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"

        android:fontFamily="@font/montserrat"

        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/violet_dark"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txt_cancel"

        app:layout_constraintTop_toBottomOf="@+id/edt_mob"


        />


    <TextView
        android:id="@+id/txt_cancel"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"

        android:gravity="center"
        android:text="@string/cancel_camel"

        android:textColor="@color/violet_dark"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_mob"

        />


</androidx.constraintlayout.widget.ConstraintLayout>