<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/pale_ash">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/filter_by"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:textColor="#adb5bd"
        android:textSize="12sp"

        />

    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height=".12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/text_gray"


        />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v1"



        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:background="@drawable/border"
        android:layout_margin="15dp"
        >




        <TextView

            android:layout_width="0dip"
            android:layout_weight=".4"
            android:layout_height="match_parent"


            android:text="@string/category"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/text_gray"
            android:gravity="center_vertical"


            />



        <Spinner
            android:id="@+id/sp_cat"
            android:layout_width="0dip"
            android:layout_weight=".6"
            android:layout_height="match_parent"

            android:gravity="center_vertical"



            />



    </LinearLayout>


    <View
        android:id="@+id/v11"
        android:layout_width="match_parent"
        android:layout_height=".12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/text_gray"
        android:layout_marginTop="12dp"

        />


    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v11"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"



        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:background="@drawable/border"

        >




        <TextView

            android:layout_width="0dip"
            android:layout_weight=".4"
            android:layout_height="match_parent"


            android:text="@string/brand"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/text_gray"
            android:gravity="center_vertical"


            />



        <Spinner
            android:id="@+id/sp_brand"
            android:layout_width="0dip"
            android:layout_weight=".6"
            android:layout_height="match_parent"

            android:gravity="center_vertical"



            />



    </LinearLayout>

    <View
        android:id="@+id/v2"
        android:layout_width="match_parent"
        android:layout_height=".12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll2"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/text_gray"
        android:layout_marginTop="12dp"

        />

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"


        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:background="@drawable/border"

        >




        <TextView

            android:layout_width="0dip"
            android:layout_weight=".4"
            android:layout_height="match_parent"


            android:text="@string/color"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/text_gray"
            android:gravity="center_vertical"


            />



        <Spinner
            android:id="@+id/sp_color"
            android:layout_width="0dip"
            android:layout_weight=".6"
            android:layout_height="match_parent"

            android:gravity="center_vertical"



            />



    </LinearLayout>


    <View
        android:id="@+id/v3"
        android:layout_width="match_parent"
        android:layout_height=".12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll3"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/text_gray"
android:layout_marginTop="12dp"

        />


    <LinearLayout
        android:id="@+id/ll4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v3"



        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:background="@drawable/border"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        >




        <TextView

            android:layout_width="0dip"
            android:layout_weight=".4"
            android:layout_height="match_parent"


            android:text="@string/size"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/text_gray"
            android:gravity="center_vertical"


            />



        <Spinner
            android:id="@+id/sp_size"
            android:layout_width="0dip"
            android:layout_weight=".6"
            android:layout_height="match_parent"

            android:gravity="center_vertical"



            />



    </LinearLayout>


    <Button
        android:id="@+id/btn_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll4"
        android:text="@string/apply"/>


</androidx.constraintlayout.widget.ConstraintLayout>